# da14531-rust-example

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  buildsystem.sh
cmake/: post_build.cmake  size-report.sh  toolchain.cmake
src/: app.rs  app_impl.rs  ble.rs  lib.rs  peripherals.rs
src/ble/: char_handlers.rs  config.rs  user_peripheral.rs
src/peripherals/: audio.rs
