[package]
edition = "2021"
name = "dialog-example"
version = "0.1.0"
license = "MIT"

[lib]
crate-type = ["staticlib"]
name = "rust"

[profile.dev]
codegen-units = 1 # better optimizations
debug = 2 
lto = true 
opt-level = "z" 

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true 
opt-level = "z" 

[dependencies]
cty = "0.2.2"
da14531-hal = "0.2.2"
da14531-sdk = "0.1.1"
paste = "1.0.7"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}

[features]
default = []
test_open = []
